--- a/resources/css/main.scss
+++ b/resources/css/main.scss
@@ -1,1 +1,9 @@
 @import"colors.scss";
+
+//als erstes ändere ich die hintergrudfarbe der Seite
+body {
+    background-color: $background10;
+}
+
+//navbar fängt hier an:
+
