First designs are done.

--- a/resources/css/colors.scss
+++ b/resources/css/colors.scss
@@ -13,7 +13,10 @@ $question60 : rgba(255,209,102,0.6);
 $approve30 : rgba(6,214,160,0.3);
 $approve60 : rgba(6,214,160,0.6);
 
-$background10 : rgba(17,138,178,0.1);
+
+$oppacity0 : rgba(0,0,0,0);
+
+$background10 : #e9f4f8;
 $background30 : rgba(17,138,178,0.3);
 $background60 : rgba(17,138,178,0.6);
 
