--- a/resources/css/application.scss
+++ b/resources/css/application.scss
@@ -12,26 +12,15 @@
     z-index: 999;
 }
 
-.karteContent {
-    align-items: center;
-    position: fixed;
-    top:0;
-    left: 0;
-    right:0;
-    bottom: 0;
-    margin: auto;
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 10px;
-    width: 40%;
-    height:50%;
-}
+
+
+
 .kartenInhalt{
-    display: flex;    
-    border: 1px solid #888;   
+    display: flex;
     justify-content: center;
     align-items: center; 
     height:50vh;
+
 }
 
 .karteLeft, .karteRight {
@@ -39,10 +28,83 @@
     padding: 10px;
 }
 
- #flashCardContent{
+.flipcardWordWrapper{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 30%;
+    padding-bottom: 35%;
+    border: 1px solid red;
+    
+}
+.flipcardWord{
+    font-size: 2rem;
+    //font-weight: bold;
+    color: $contrast;
+    text-align: center;
+    margin: 0;
+    padding: 0;
+    margin-left: 10px;
+    margin-right: 10px;
+    //border: 1px solid red;
+}
 
-    border: 5px solid green;
+.karteContent {
+    align-items: center;
+   // position: fixed;
+    left: 0;
+    right:0;
+    margin: auto;
+    //margin-top: 20px;
+    //padding: 20px;
+    background-color: transparent;
+    border-radius: 18px;
+    //putting in a helper border
+    border: 4px solid $contrast60;
+    width: 60vw;// wird nur auf der Mobile ansicht gebraucht
+    height:50vh;
+}
+ .flashCardContent{
+    //border: 5px solid red;
+    position:absolute;
+    background-color: white;
+    margin: 0;
+    width: 100%;
+    height: 100%;
+    padding-top: 20px;
+    box-sizing:border-box;
+    border-radius: 18px;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+
  }
+ .backface{
+    transform:rotateY(180deg);
+ }
+
+.countZeile{
+    display: flex;
+    margin:20;
+    margin-top: 40px;
+    justify-content: space-between;
+    background-color: #fff;
+}
+
+//hier sollte das umdrehen erfolgen
+.flip-card-inner{
+    position: relative;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    width: 100%;
+    height: 100%;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+}
+.turnCard{//gonna be added to flip-card-inner
+    transform: rotateY(180deg);//hier wird die Karte mit hilfe von js umgedreht
+}
+
     .confirmRight{
         position: absolute;
         top: 80%;
