--- a/resources/css/main.scss
+++ b/resources/css/main.scss
@@ -72,6 +72,47 @@ body {
     margin: 20px;
     background-color: $background10;
 }
+.nomargin{
+    margin: 0;
+}
+.anzeigemargin{
+    margin: 20%;
+}
+.repetitionCountBox{
+    height: 20px;
+    width: 40px;
+    background-color: $deny;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    align-items: center;
+    display:flex;
+
+}
+.countAnzeige{
+    color: $contrast;
+    font-size: 0.9rem;
+}
+.doneCountBox{
+    height: 20px;
+    width: 40px;
+    background-color: $approve;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    align-items: center;
+    display:flex;
+    justify-content: flex-end;
+    
+}
+.displayFlex{
+    display: flex;
+}
+
+$iconSize: 50px; //gehört zu IconSize
+.iconSpacer{
+    height: $iconSize;
+    width: $iconSize;
+    margin: 25px;
+}
 
 //fonts are gonne be colored here
 .pagetitle{
