--- a/resources/css/main.scss
+++ b/resources/css/main.scss
@@ -154,6 +154,9 @@ $bildmass: 50vw;
 .displayFlex{
     display: flex;
 }
+.noUnderline{
+    text-decoration: none;
+}
 
 $iconSize: 50px; //gehört zu IconSize
 .iconSpacer{
