--- a/resources/css/library.scss
+++ b/resources/css/library.scss
@@ -1,22 +1,21 @@
-@import"colors.scss";
-
+@import "colors.scss";
 
 //vielleicht muss ich für die Schriften noch ein wenig mehr auf Variablen Grössen setzen
-.library-Card{
+.library-Card {
     background-color: white;
     color: $approve;
     position: sticky;
     padding: 20px;
-    border : 3px solid $contrast60;
+    border: 3px solid $contrast60;
     border-radius: 20px;
     margin: 25px;
 }
-.cardTitle{
+.cardTitle {
     font-size: 24px;
     //font-weight: bold;
     color: $contrast;
 }
-.begriffCount{
+.begriffCount {
     font-size: 18px;
     color: $contrast;
     background-color: $approve60;
@@ -24,10 +23,17 @@
     padding: 9px;
     border-radius: 18px;
 }
-.leading-library{
+.delete-hitbox {
+    padding: 20px;
+    //zur hilfe eine umrandung
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+}
+.leading-library {
     display: flex;
 }
-.leadingText{
+.leadingText {
     margin-left: 20px;
     margin-top: 10px;
     margin-right: 20px;
@@ -36,16 +42,16 @@
 hr.hrborder {
     border-top: 2px solid $contrast60;
 }
-.center-vertically{
+.center-vertically {
     text-align: center;
 }
-.inputField{
-    border:none;
+.inputField {
+    border: none;
     border-bottom: 2px solid $contrast60;
     margin-bottom: 0;
     width: 100%;
 }
-.formHelper{
+.formHelper {
     color: $contrast;
     margin-top: 0;
     //turn the text to like 18px
