--- a/resources/css/colorsNvariables.scss
+++ b/resources/css/colorsNvariables.scss
@@ -22,3 +22,9 @@ $background60 : rgba(17,138,178,0.6);
 
 $contrast30 : rgba(7,59,76,0.3);
 $contrast60 : rgba(7,59,76,0.6);
+
+
+//alle math variablen:
+$phonewidth: 650px;
+$middlewidth: 1000px;//and bigger
+$bigwidth: 1200px;//and bigger
