--- a/resources/css/library.scss
+++ b/resources/css/library.scss
@@ -1,4 +1,4 @@
-@import "colors.scss";
+@import "colorsNvariables.scss";
 
 //vielleicht muss ich für die Schriften noch ein wenig mehr auf Variablen Grössen setzen
 .library-Card {
