--- a/resources/css/main.scss
+++ b/resources/css/main.scss
@@ -1,9 +1,8 @@
-@import"colors.scss";
+@import"colorsNvariables.scss";
 
-$phonewidth: 650px;
-$middlewidth: 1000px;//and bigger
-$bigwidth: 1200px;//and bigger
+
 //als erstes ändere ich die hintergrudfarbe der Seite
+
 body {
     background-color: $background10;
     padding: 0;
@@ -25,15 +24,20 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-   // padding-top: 30%;
-   // padding-bottom: 35%;
     border: 1px solid red;
     
 }
 
+
 @media screen and (min-width: $phonewidth) {
     .flipcardWordWrapper{
         height:10vw;
+    }
+}
+@media screen and (max-width: $phonewidth) {
+    .flipcardWordWrapper{
+        padding-top : 30%;
+        padding-bottom: 35%;
     }
 }
 
@@ -65,7 +69,7 @@ body {
 }
 @media screen and (max-width: $phonewidth) {
     .flipcardWordWrapper{
-        height:4vw;
+        height:140px;
     }
     $bildmass: 50vw;
     #profilBild{
