--- a/resources/css/animations.scss
+++ b/resources/css/animations.scss
@@ -121,7 +121,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        border: 1px solid red;
+        //border: 1px solid red;
         flex:5;
     }
     .cardBottom{
