Styling für ReleaseNotes in Progress

--- a/resources/css/library.scss
+++ b/resources/css/library.scss
@@ -1,4 +1,5 @@
 @import "colorsNvariables.scss";
+@import "textStyle.scss";
 
 //vielleicht muss ich für die Schriften noch ein wenig mehr auf Variablen Grössen setzen
 .library-Card {
