--- a/resources/css/textStyle.scss
+++ b/resources/css/textStyle.scss
@@ -12,3 +12,22 @@
 .sectionWrapper p {
     margin: 0; /* Um den Abstand um den Text zu entfernen */
 }
+.sectionSubTitle{
+    color: $contrast;
+    font-size: 1.5rem;
+    font-weight: 500;
+
+}
+//wird auch für Screenshots verwendet
+.screenshots{
+    max-height: 330px;
+    border: 3px solid black;
+    border-radius: 10px;
+    margin-top: 40px;
+}
+.Bildunterschrift{
+    font-size: 0.8rem;
+    color: $contrast60;
+    //text-align: center;
+    margin-top: 10px;
+}
