small css change

--- a/resources/css/main.scss
+++ b/resources/css/main.scss
@@ -8,6 +8,10 @@ body {
     padding: 0;
     margin: 0;
 }
+.space{
+    //border: 3px solid $contrast;
+    width: 20px;
+}
 .footer-wrapper{
     position: fixed;
 }
