--- a/resources/css/main.scss
+++ b/resources/css/main.scss
@@ -29,6 +29,9 @@ body {
     //add something that makes every child of here have at least 5px space between them
 }
 
+.anker-no-underline{
+    text-decoration: none;
+}
 
 
 
