--- a/resources/css/main.scss
+++ b/resources/css/main.scss
@@ -269,13 +269,39 @@ $iconSize: 4rem; //gehört zu IconSize
     outline: 3px solid $approve60;
 }
 .standartButton{
-    background-color: transparent;
+
+    //das wäre ein guter Ansatz bei color invert
+    
+    background-color: white;
     color: $contrast;
     border: 2px solid $contrast60;
     border-radius: 5px;
-    padding: 5px;
+    padding: 5px 13px;
     margin: 5px;
     cursor: pointer;
     font-size: 1rem;
     font-weight: bold;
+
+    &:hover{
+        background-color: $contrast;
+        color: white;
+
+    }
 }   
+.approveButton{
+    background-color: $contrast;
+    color: $background10;
+    //border: 2px solid $approve;
+    border-radius: 5px;
+    padding: 5px 13px ;
+    
+    margin: 5px;
+    cursor: pointer;
+    font-size: 1rem;
+    font-weight: bold; 
+    transition: background-color 0.23s ease-in-out;
+    &:hover{
+        background-color: $approve;
+        color: $background10;
+    }
+}
