Alles machbare aus review mit Ray fertig.

--- a/resources/css/main.scss
+++ b/resources/css/main.scss
@@ -116,6 +116,7 @@ body {
     //change the textsize
     font-size: 50px;
     font-weight: bold;
+    margin: auto;
 }
 .footer_box{
     color: $approve;
