--- a/resources/css/main.scss
+++ b/resources/css/main.scss
@@ -306,3 +306,16 @@ $iconSize: 4rem; //gehört zu IconSize
         color: $background10;
     }
 }
+//modal box for the textPlay
+#translationModal{
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: grey;
+}
