--- a/resources/css/main.scss
+++ b/resources/css/main.scss
@@ -317,5 +317,13 @@ $iconSize: 4rem; //gehört zu IconSize
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: grey;
+    background-color: rgba(0,0,0,0.4);
+}
+.modal-content{
+    background-color: $background10;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid $contrast;
+    width: 80%;
+    border-radius: 10px;
 }
