--- a/resources/css/main.scss
+++ b/resources/css/main.scss
@@ -216,7 +216,9 @@ $iconSize: 4rem; //gehört zu IconSize
    // text-align: justify;
     //font-weight: bold;
 }
-
+.maxwidthXY{
+    max-width: 500px;
+}
 @media screen and (max-width: $phonewidth) {
     .des-only {
         display: none;
@@ -306,6 +308,20 @@ $iconSize: 4rem; //gehört zu IconSize
         color: $background10;
     }
 }
+//authentification classes:
+.authTextField {
+    width: 100%;
+    height: 40px;
+    border: 2px solid $contrast60;
+    border-radius: 10px;
+    padding: 5px;
+    resize: none;
+
+    &:focus {
+        border-color: green;
+    }
+}
+
 //modal box for the textPlay
 #translationModal{
     display: none;
