--- a/resources/css/main.scss
+++ b/resources/css/main.scss
@@ -216,6 +216,15 @@ $iconSize: 4rem; //gehört zu IconSize
    // text-align: justify;
     //font-weight: bold;
 }
+.sectionWrapper {
+    padding-left: 20px; /* Abstand vom linken Rand erhöhen */
+    border-left: 2px solid $contrast30; /* Linie links vom Text mit Ihrer gewünschten Farbe (hier blau) */
+    margin-top: 10px; /* Optional: Abstand nach oben hinzufügen */
+}
+
+.sectionWrapper p {
+    margin: 0; /* Um den Abstand um den Text zu entfernen */
+}
 .maxwidthXY{
     max-width: 500px;
 }
