--- a/resources/css/main.scss
+++ b/resources/css/main.scss
@@ -317,6 +317,22 @@ $iconSize: 4rem; //gehört zu IconSize
         color: $background10;
     }
 }
+.standartDangerButton{
+    background-color: $deny;
+    color: $background10;
+    border: 2px solid $deny;
+    border-radius: 5px;
+    padding: 5px 13px;
+    margin: 5px;
+    cursor: pointer;
+    font-size: 1rem;
+    font-weight: bold;
+    transition: background-color 0.23s ease-in-out;
+    &:hover{
+        background-color: $deny60;
+        color: $background10;
+    }
+}
 //authentification classes:
 .authTextField {
     width: 100%;
