--- a/resources/css/main.scss
+++ b/resources/css/main.scss
@@ -333,6 +333,30 @@ $iconSize: 4rem; //gehört zu IconSize
         color: $background10;
     }
 }
+.standartSelect{
+    background-color: $background10;
+    color: $contrast;
+    border: 2px solid $contrast60;
+    border-radius: 5px;
+    padding: 5px 13px;
+    margin: 5px;
+    cursor: pointer;
+    font-size: 1rem;
+    font-weight: bold;
+    transition: background-color 0.23s ease-in-out;
+    &:hover{
+        background-color: $contrast;
+        color: $background10;
+    }
+
+}
+.delete-hitbox {
+    padding: 20px;
+    //zur hilfe eine umrandung
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+}
 //authentification classes:
 .authTextField {
     width: 100%;
@@ -348,6 +372,13 @@ $iconSize: 4rem; //gehört zu IconSize
 }
 
 //for the login and register and /profile page and update-interests
+.centerTextvertical{
+    //this is used on <p> tags to center em
+    text-align: center;
+    margin: auto;
+    //change fontcolor
+    color: $contrast;
+}
 .interestsWords{
     color: $approve;
     font-size: 1.2rem;
@@ -358,7 +389,7 @@ $iconSize: 4rem; //gehört zu IconSize
     border: 2px solid $contrast30;
     padding: 5px;
     width:fit-content;
-    display: block;
+    //display: block;
     cursor: pointer;
 }
 .interestsWords:hover{
