--- a/resources/css/main.scss
+++ b/resources/css/main.scss
@@ -452,3 +452,43 @@ $iconSize: 4rem; //gehört zu IconSize
     width: 80%;
     border-radius: 10px;
 }
+
+// -/textPlay fängt hier an
+.dropdown-wrapper{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin: 10px;
+}
+.dropdown{
+    width: 100%;
+    height: 40px;
+    border: 2px solid $contrast60;
+    border-radius: 10px;
+    padding: 5px;
+    resize: none;
+    background-color: $background10;
+    color: $contrast;
+    font-size: 1.2rem;
+    font-weight: bold;
+    margin: 10px;
+    cursor: pointer;
+}
+.dropdown:focus{
+    outline: 3px solid $approve60;
+}
+.dropdown-content{
+    display: none;
+    position: absolute;
+    background-color: $background10;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+.dropdown-content a{
+    color: $contrast;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
