--- a/resources/css/main.scss
+++ b/resources/css/main.scss
@@ -455,12 +455,23 @@ $iconSize: 4rem; //gehört zu IconSize
 
 // -/textPlay fängt hier an
 .dropdown-wrapper{
-    display: flex;
+    display: inline-block;
+    position: relative;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    padding: 16px;
     margin: 10px;
+    cursor: pointer;
 }
+.dropbtn {
+    background-color: $contrast;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+  }
 .dropdown{
     width: 100%;
     height: 40px;
@@ -481,13 +492,14 @@ $iconSize: 4rem; //gehört zu IconSize
 .dropdown-content{
     display: none;
     position: absolute;
-    background-color: $background10;
+    background-color: $contrast;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
+.show {display:block;}
 .dropdown-content a{
-    color: $contrast;
+    color: $approve;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
