--- a/resources/css/main.scss
+++ b/resources/css/main.scss
@@ -27,55 +27,87 @@ body {
     display: flex;
     padding: 8px;
     user-select: none;
+    z-index: 2;
 }
 
 .anker-no-underline{
     text-decoration: none;
 }
 
+.Card-Wrapper{
+    //border: 5px solid green;
+        display: grid;
+        grid-gap: 20px;
+        z-index:5;
 
+        @media screen and (min-width: 501px) and (max-width: 850px) {
+            grid-template-columns: auto auto;
+        }
+        @media screen and (min-width: 851px) {
+            grid-template-columns: auto auto auto;
+        }
 
-/* @media screen and (min-width: $phonewidth) {
-    .flipcardWordWrapper{
-        height:10vw;
-    }
 }
-@media screen and (max-width: $phonewidth) {
-    .flipcardWordWrapper{
-        padding-top : 30%;
-        padding-bottom: 35%;
-    }
-} */
 
-@media screen and (min-width: $phonewidth) {
-//hier wird die nav bar für die Desktop ansicht angepasst
-    .hero{
-        display:flex;
-    }
-    $bildmass: 20vw;
-    #profilBild{
-        height: $bildmass;
-        width: $bildmass*1.37;
-        margin: 10px;
-        position:relative;
-        left:-44%;
-        top:-4.5%;
-    }
-    .image-crop{
-        height: $bildmass*0.95;
-        width: $bildmass*0.95;
-        overflow: hidden;
-        position:relative;
-        border-radius: 50%;
-        border: 6px solid $approve;
-        box-sizing: border-box;
-        margin: 10px auto;
-        display: block;
-    }
+.Texts-Card {
+    //wird gebraucht weil es ähnlich ist wie librarycard jedoch hat 
+    background-color: white;
+    color: $approve;
+    position: sticky;
+    padding: 20px;
+    border: 3px solid $contrast60;
+    border-radius: 20px;
+    margin: 25px;
+    
+        //make a max-width: ;
+        max-width: 900px;
+        //make it align in the center horizontally
+        margin-left: auto;
+        margin-right: auto;
+        width: 100%; // Add this line
 }
-@media screen and (max-width: $phonewidth) {
-    .flipcardWordWrapper{
-        height:140px;
+
+    /* @media screen and (min-width: $phonewidth) {
+        .flipcardWordWrapper{
+            height:10vw;
+        }
+    }
+    @media screen and (max-width: $phonewidth) {
+        .flipcardWordWrapper{
+            padding-top : 30%;
+            padding-bottom: 35%;
+        }
+    } */
+
+    @media screen and (min-width: $phonewidth) {
+    //hier wird die nav bar für die Desktop ansicht angepasst
+        .hero{
+            display:flex;
+        }
+        $bildmass: 20vw;
+        #profilBild{
+            height: $bildmass;
+            width: $bildmass*1.37;
+            margin: 10px;
+            position:relative;
+            left:-44%;
+            top:-4.5%;
+        }
+        .image-crop{
+            height: $bildmass*0.95;
+            width: $bildmass*0.95;
+            overflow: hidden;
+            position:relative;
+            border-radius: 50%;
+            border: 6px solid $approve;
+            box-sizing: border-box;
+            margin: 10px auto;
+            display: block;
+        }
+    }
+    @media screen and (max-width: $phonewidth) {
+        .flipcardWordWrapper{
+            height:140px;
     }
     $bildmass: 50vw;
     #profilBild{
@@ -472,6 +504,9 @@ $iconSize: 4rem; //gehört zu IconSize
     border: none;
     cursor: pointer;
   }
+.z-index-up{
+    z-index: 1;
+}
 .dropdown{
     width: 100%;
     height: 40px;
