Fehlerbehebungen aus 'eigeneNotizen24'

--- a/resources/css/main.scss
+++ b/resources/css/main.scss
@@ -398,7 +398,7 @@ $iconSize: 4rem; //gehört zu IconSize
 
 }
 .delete-hitbox {
-    padding: 20px;
+    //padding: 20px;
     border: none;
     background-color: transparent;
     cursor: pointer;
