--- a/resources/css/main.scss
+++ b/resources/css/main.scss
@@ -327,6 +327,7 @@ $iconSize: 4rem; //gehört zu IconSize
     margin: 20px;
 
 }
+
 .standartButton{
 
     //das wäre ein guter Ansatz bei color invert
@@ -340,6 +341,7 @@ $iconSize: 4rem; //gehört zu IconSize
     cursor: pointer;
     font-size: 1rem;
     font-weight: bold;
+    //height: 5.1rem;
 
     &:hover{
         background-color: $contrast;
