--- a/resources/css/colorsNvariables.scss
+++ b/resources/css/colorsNvariables.scss
@@ -3,6 +3,7 @@ $question : #FFD166;
 $approve : #06D6A0;
 $background : #118AB2;
 $contrast : #073B4C;
+$whiteColour : #FFFFFF;
 
 $deny30 : rgba(239,71,111,0.3);
 $deny60 : rgba(239,71,111,0.6);
@@ -18,6 +19,7 @@ $oppacity0 : rgba(0,0,0,0);
 
 $background10 : #e9f4f8;
 $background30 : rgba(17,138,178,0.3);
+$background30w : #BAC3C9;
 $background60 : rgba(17,138,178,0.6);
 
 $contrast30 : rgba(7,59,76,0.3);
