Fix form validation and remove development code

--- a/resources/css/library.scss
+++ b/resources/css/library.scss
@@ -57,6 +57,12 @@ hr.hrborder {
     //turn the text to like 18px
     font-size: 14 px;
 }
+.errorMessages{
+    color: $deny;
+    margin-top: 0;
+    //turn the text to like 18px
+    font-size: 1.2rem;
+}
 .titleMargin{
     margin-top: 0;
     max-width: 900px;
