--- a/resources/css/main.scss
+++ b/resources/css/main.scss
@@ -94,8 +94,8 @@ body {
         width: $bildmass*1.37;
         margin: 10px;
         position:relative;
-        left:-44%;
-        top:-4.5%;
+        left:-47%;
+        top:-7.5%;
     }
     .image-crop{
         height: $bildmass*0.95;
@@ -103,10 +103,10 @@ body {
         overflow: hidden;
         position: sticky;
         left: 0;
-        border-radius: 43%;
+        border-radius: 36%;
         
         box-sizing: border-box;
-        margin: 10px auto;
+        margin-right : 2rem;
         display: block;
     }
 }
@@ -412,6 +412,7 @@ $iconSize: 4rem; //gehört zu IconSize
     padding: 5px 13px ;
     
     margin: 5px;
+    margin-left:0;
     cursor: pointer;
     font-size: 1rem;
     font-weight: bold; 
