--- a/resources/css/main.scss
+++ b/resources/css/main.scss
@@ -615,3 +615,34 @@ $iconSize: 4rem; //gehört zu IconSize
     text-decoration: none;
     display: block;
 }
+
+
+// about_me spezifisch::
+.aboutCardsIcons{
+    padding-right: 1rem;
+    border-right: 2px solid $contrast60;
+    margin-right: 1rem;
+}
+.card-title-about{
+    color: $contrast;
+    font-size: 1rem;
+    font-weight: bold;
+    margin: 10px;
+    text-align: left;
+}
+.media-Card{
+    flex: 0 0 100%;
+    max-width: 100%;
+}
+@media (min-width:600px){
+    .media-Card{
+        flex: 0 0 50%;
+        max-width: 50%;
+    }
+}
+@media (min-width: 1200px){
+    .media-Card{
+        flex: 0 0 25%;
+        max-width: 25%;
+    }
+}
