changes to layout in about me

--- a/resources/css/main.scss
+++ b/resources/css/main.scss
@@ -629,6 +629,9 @@ $iconSize: 4rem; //gehört zu IconSize
     font-weight: bold;
     margin: 10px;
     text-align: left;
+    p{
+        font-size: 20px;
+    }
 }
 .media-Card{
     flex: 0 0 100%;
