--- a/resources/css/main.scss
+++ b/resources/css/main.scss
@@ -36,11 +36,9 @@ body {
 #gif1{
     @media screen and (max-width: 450px) {
         width: 150px;
-        
     }
     @media  screen and (max-width: 650px)  {
         width: 270px;
-        
     }
 }
 
@@ -57,6 +55,14 @@ body {
         width: 370px;
         
     }
+}
+.submit-wrapper-addText{
+     display: flex;
+    // justify-content: center;
+    // align-items: center;
+    // flex-direction: column;
+    margin-top: 20px;
+
 }
 .Card-Wrapper{
     //border: 5px solid green;
