ErrorMSG Fix & Database revision finish

--- a/resources/css/library.scss
+++ b/resources/css/library.scss
@@ -57,6 +57,9 @@ hr.hrborder {
     //turn the text to like 18px
     font-size: 14 px;
 }
+.colorDanger {
+    color: $deny;
+}
 .errorMessages{
     color: $deny;
     margin-top: 0;
