--- a/resources/css/main.scss
+++ b/resources/css/main.scss
@@ -734,3 +734,16 @@ $iconSize: 4rem; //gehört zu IconSize
         max-width: 25%;
     }
 }
+//for the textfieldcopy process
+.textTopping{
+    color: white;
+    font-size: 1.2rem;
+    font-weight: bold;
+    background-color: $contrast;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border: 2px solid $contrast30;
+    padding: 5px;
+    display: flex;
+    align-items: center;
+}
