carousel finished up

--- a/resources/css/main.scss
+++ b/resources/css/main.scss
@@ -42,6 +42,12 @@ body {
     text-decoration: none;
 }
 //MARK: /Landingpage::
+
+.carousel-wrapper{
+    padding-left: 10%;
+    padding-right: 10%;
+    
+}
  .solutionGraph{
     background-color: white;
  }
