--- a/resources/css/main.scss
+++ b/resources/css/main.scss
@@ -42,11 +42,52 @@ body {
     text-decoration: none;
 }
 //MARK: /Landingpage::
+.colorBreak{
+    background-color: $contrast;
+    color: $background10;
+    
+    margin-top: 13vh;
+    p{
+        font-size: 4vw;
+        font-weight: bold;
+        padding-bottom: 6vw;
+        padding-top: 6vw;
+        text-align: center;
+    }
+}
+@media screen and (max-width: 500px) {
+    #carouselExample{
+    margin-top: 20px;
+    margin-bottom: 20px;
+    height: 68vw;
+    }
+}
 
 .carousel-wrapper{
     padding-left: 10%;
     padding-right: 10%;
     
+    @media screen and (max-width: 500px) {
+        .pagetitle{
+            font-size: 5vw;
+            font-weight: bold;
+        }
+        .sectiontitle{
+            font-size: 4vw;
+            font-weight: bold;
+        }
+    }
+    @media screen and (min-width: 500px) {
+        .pagetitle{
+            font-size: 3.5vw;
+            font-weight: bold;
+        }
+        .sectiontitle{
+            font-size: 2.5vw;
+            font-weight: bold;
+        }
+        
+    }
 }
  .solutionGraph{
     background-color: white;
@@ -63,7 +104,7 @@ body {
         
         background-size: cover;
         background-position: center;
-        height: 100vh;
+        height: 80vh;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -94,6 +135,15 @@ body {
     @media screen and (max-width: 450px) {
         text-align: center;
         
+        
+    }
+    .pagetitle{
+        font-size: 5.4vw;
+        font-weight: bold;
+    }
+    .sectiontitle{
+        font-size: 4.4vw;
+        font-weight: normal;
     }
 }
 .landingFont2{
@@ -105,6 +155,8 @@ body {
 }
 
 #gif1{
+    padding-top: 0;
+    margin-top: 0;
     @media screen and (max-width: 450px) {
         width: 150px;
     }
